# cpp_tools

./: .gitignore  CMakeLists.txt  README.md  cpptools.props  update-all-header.ps1  vcpkg.json
cmake/: cpp_tools_bootstrap_cmake_tools.cmake
cmake/Modules/: CopyDirectoryStructure.cmake  CopyDirectoryStructureIgnoreBuild.cmake  GenerateAggregateHeader.cmake  GenerateAggregateHeadersForEachLevelIgnoreBuild.cmake  GenerateRecursiveAggregateHeadersToUpperDirForEachLevel.cmake  GenerateRecursiveAggregateHeadersToUpperDirForEachLevelIgnoreBuild.cmake  WriteIfChanged.cmake
cmake/dependencies/sdl/sdl3/: cpptools_enable_sdl3.cmake  sdl3.cmake
include/: cpptools.hpp
include/cpptools/: core.hpp  cpptools.hpp  framework.hpp  modules.hpp
include/cpptools/core/: core.hpp  traits.hpp
include/cpptools/core/traits/: array_traits.h  for_each.h  traits.hpp
include/cpptools/framework/: benchmark.hpp  framework.hpp  math.hpp  openmp.hpp  print.hpp  utils.hpp
include/cpptools/framework/benchmark/: backend.hpp  benchmark.hpp  measureDuration.h
include/cpptools/framework/benchmark/backend/: backend.hpp  openmp.hpp  serial.hpp
include/cpptools/framework/benchmark/backend/openmp/: measure_duration.h  openmp.hpp
include/cpptools/framework/benchmark/backend/serial/: measure_duration.h  serial.hpp
include/cpptools/framework/ffmpeg/backend/: serial.hpp
include/cpptools/framework/ffmpeg/backend/serial/: AudioDecode_open.h  decode_audio_stream_to_pcm.h  frame_to_pcm.h  serial.hpp
include/cpptools/framework/filler/backend/: serial.hpp
include/cpptools/framework/filler/backend/serial/: fill_pattern.h  fill_random.h  fill_zero.h  serial.hpp
include/cpptools/framework/math/: beckend.hpp  benchmark.hpp  math.hpp
include/cpptools/framework/math/backend/: openmp.hpp  serial.hpp
include/cpptools/framework/math/backend/openmp/: get_dot.h  get_frobenius_norm_distance.h  multiply_matrix_vector.h  openmp.hpp  qrdecomposition_mgs.h  transpose.h  upper_triangular_back_substitution.h
include/cpptools/framework/math/backend/serial/: QRDecomposition.h  get_dot.h  get_frobenius_norm_distance.h  get_sum.h  multiply_matrix.h  multiply_matrix_vector.h  qrdecomposition_mgs.h  serial.hpp  transpose.h  upper_triangular_back_substitution.h
include/cpptools/framework/math/beckend/: beckend.hpp  openmp.hpp  serial.hpp
include/cpptools/framework/math/beckend/openmp/: QRDecomposition.h  getSum.h  getTranspose.h  openmp.hpp
include/cpptools/framework/math/beckend/serial/: QRDecomposition.h  getSum.h  getTranspose.h  serial.hpp
include/cpptools/framework/math/benchmark/: allversion.hpp  benchmark.hpp
include/cpptools/framework/math/benchmark/allversion/: allversion.hpp  get_dot.h
include/cpptools/framework/openmp/: openmp.hpp  openmp_filler.h  openmp_getter.h  update-module-header.ps1
include/cpptools/framework/print/: CMakeLists.txt  print.hpp  printing.h
include/cpptools/framework/print/backend/serial/: print_2d.h
include/cpptools/modules/: benchmark.hpp  modules.hpp
include/cpptools/modules/benchmark/: benchmark.hpp  domain.hpp
include/cpptools/modules/benchmark/domain/: domain.hpp  model.hpp
include/cpptools/modules/benchmark/domain/model/: benchmark_result.h  model.hpp
src/framework/ffmpeg/backend/serial/: AudioDecode_open.cpp  decode_audio_stream_to_pcm.cpp  frame_to_pcm.cpp
src/framework/openmp/: CMakeLists.txt
tools/codegen/: sync_generated_to_source.ps1
